[package]
name = "abrafi-backed-token"
version = "0.1.0"
description = "Generic collateral-backed abrafi token program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abrafi_backed_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test = []
# Use this feature when upgrading the existing USDAF deployment in-place.
# It keeps the state PDA seed as "usdaf_state" so the on-chain account
# remains reachable after the upgrade. New deployments (SOLAF etc.) do
# not set this flag — their program IDs differ so there is no collision.
usdaf-compat = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token", "metadata"] }
shared = { path = "../../shared" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("test", "usdaf-compat"))'] }
deprecated = "allow"
