[package]
name = "abrafi-staking-liquid"
version = "0.1.0"
description = "Generic liquid staking program (sUSDAF, sSOLAF, sBTCAF)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abrafi_staking_liquid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test = []
susdaf-compat = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token", "metadata"] }
shared = { path = "../../shared" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("test", "susdaf-compat"))'] }
deprecated = "allow"
