[package]
name = "abrafi-staking-rewards"
version = "0.1.0"
description = "Generic claimable-rewards staking program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abrafi_staking_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
shared = { path = "../../shared" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("test"))'] }
deprecated = "allow"
