[package]
name = "abrafi-yield-router"
version = "0.1.0"
description = "Yield router — splits yield tokens between staking programs and external wallets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abrafi_yield_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
test = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
abrafi-staking-rewards = { path = "../abrafi-staking-rewards", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("test"))'] }
deprecated = "allow"
